# Calculator_test

./: CMakeLists.txt  SimpleCalculator.cpp  SimpleCalculator.h  Testing.h  main  main.cpp  my_test-main.gcno
